--- a/contacto.html
+++ b/contacto.html
@@ -9,10 +9,12 @@
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
 <body>
     <header>
-        <h1>Contacto</h1>
+        <h1>Formulario de Contacto</h1>
         <nav>
             <img class= "percha" src ="Imagenes/percha.png" alt="percha">
-            <a href ="index.html">Volver a la home</a>
+            <a class="home" href ="index.html">Volver a la home</a>
         </nav>
+    </header>
+
 </body>
 </html>
