--- a/historia.html
+++ b/historia.html
@@ -9,11 +9,11 @@
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
 <body>
     <header>
-        <h1>Historia</h1>
         <nav>
             <img class= "percha" src ="Imagenes/percha.png" alt="percha">
-            <a href ="index.html">Volver a la home</a>
+            <a class="home" href ="index.html">Volver a la home</a>
         </nav>
+    </header>    
     <main>
         <h2>Evolución de la moda a través de los años</h2>
         <img class="evolucion" src ="Imagenes/evolucion.jpg" alt="evolucion">
