--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
 <body>
     <header>
+        <img class= "logo" src ="Imagenes/logo.png" alt="logo">
         <h1>Codo Moda</h1>
         <nav>
             <a href ="index.html">
                 <img class= "percha" src ="Imagenes/percha.png" alt="percha">
             </a>
-            <a href="index.html">Home</a>
-            <a href="historia.html">Historia</a>
-            <a href="looks.html">Looks</a>
-            <a href="contacto.html">Contacto</a>
+            <a class="home" href="index.html">Home</a>
+            <a class="home" href="historia.html">Historia</a>
+            <a class="home" href="looks.html">Looks</a>
+            <a class="home" href="contacto.html">Contacto</a>
 
         </nav>
     </header>
