--- a/looks.html
+++ b/looks.html
@@ -9,13 +9,15 @@
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
 <body>
     <header>
-        <h1>Looks</h1>
+        <img class= "logo" src ="Imagenes/logo.png" alt="logo">
+        <h1>Looks con Codo</h1>
         <nav>
             <img class= "percha" src ="Imagenes/percha.png" alt="percha">
-            <a href ="index.html">Volver a la home</a>
+            <a class="home" href ="index.html">Volver a la home</a>
         </nav>
-        <div>
-            <h2>Tips para varios dias</h2>
+    </header>
+        <div class="container">
+            <h2>Tips para varios días</h2>
             <div><img class= "look1" src ="Imagenes/1.png" alt="look1"></div>
             <div><img class= "look2" src ="Imagenes/2.png" alt="look2"></div>
             <div><img class= "look3" src ="Imagenes/3.png" alt="look3"></div>
