--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,16 @@
     <title>Codo Moda</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
+
 <body>
     <header>
-        <h1>Formulario de Contacto</h1>
+        <h2>Formulario de Contacto</h2>
         <nav>
-            <img class= "percha" src ="Imagenes/percha.png" alt="percha">
-            <a class="home" href ="index.html">Volver a la home</a>
+            <img class="percha" src="Imagenes/percha.png" alt="percha">
+            <a class="home" href="index.html">Volver a la home</a>
         </nav>
     </header>
 
 </body>
+
 </html>
