--- a/historia.html
+++ b/historia.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,155 +8,156 @@
     <title>Codo Moda</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
+
 <body>
     <header>
         <nav>
-            <img class= "percha" src ="Imagenes/percha.png" alt="percha">
-            <a class="home" href ="index.html">Volver a la home</a>
+            <img class="percha" src="Imagenes/percha.png" alt="percha">
+            <a class="home" href="index.html">Volver a la home</a>
         </nav>
-    </header>    
+    </header>
     <main>
-        <h2>Evolución de la moda a través de los años</h2>
-        <img class="evolucion" src ="Imagenes/evolucion.jpg" alt="evolucion">
+        <h2>La moda a través de los años...</h2>
+        <img class="evolucion" src="Imagenes/evolucion.jpg" alt="evolucion">
         <div>
             <h3>1910</h3>
-            <p>La Revolución Industrial y la Primera Guerra Mundial causaron un 
-            impacto en la moda durante esta década.Junto con el Art Deco, que 
-            apareció al mismo tiempo, y el jazz, las mujeres fueron las calles 
-            más provocativas y con una libertad sexual nunca antes vista. 
-            Los hombres ya no eran las figuras paternas, sino joviales y ligeros. 
-            Se utilizaba el corsé y la silueta era exagerada.
+            <p>La Revolución Industrial y la Primera Guerra Mundial causaron un gran
+                impacto en la moda a lo largo de esta década. Junto con la influencia del Art Decó -que
+                apareció al mismo tiempo- y el jazz, las mujeres salieron a las calles
+                más provocativas y con una libertad sexual nunca antes vista.
+                Los hombres ya no eran las figuras paternas, sino joviales y ligeros.
+                Se utilizaba el corsé y la silueta era exagerada.
             </p>
             <img class="1910" src="Imagenes/1910.jpg" alt="1910">
         </div>
         <div>
             <h3>1920</h3>
-            <p>La moda en esta época representa la diversión y la libertad que 
-            había después de la guerra. Predominan los vestidos sueltos, los 
-            tacones bajos, los sombreros y los flecos. Se deja de utilizar el
-            corsé y el dobladillo llega por encima del tobillo. 
-            El cabello corto fue otra tendencia súper moderna. Hasta la década 
-            anterior,lo normal era dejar los pelos extremadamente largos y atados
-            en los peinados más diversos.
-            La estilista Coco Chanel fue una de las que adoptó el look y lo difundió.
-            Aún así, comenzó con el movimiento de usar pantalones y esmóquines, antes 
-            clasificados como masculinos. En cuanto a los complementos, las plumas, 
-            abalorios y perlas dominaron los looks para dar un aire elegante y con 
-            mucho movimiento que acompañaba a los bailes y en las discotecas.
+            <p>La moda en esta época representa la diversión y la libertad que
+                había después de la guerra. Predominan los vestidos sueltos, los
+                tacones bajos, los sombreros y los flecos. Se deja de utilizar el
+                corsé y el dobladillo llega por encima del tobillo.
+                El cabello corto fue otra tendencia súper moderna. Hasta la década
+                anterior,lo normal era dejar los pelos extremadamente largos y atados
+                en los peinados más diversos.
+                La estilista Coco Chanel fue una de las que adoptó el look y lo difundió.
+                Aún así, comenzó con el movimiento de usar pantalones y esmóquines, antes
+                clasificados como masculinos. En cuanto a los complementos, las plumas,
+                abalorios y perlas dominaron los looks para dar un aire elegante y con
+                mucho movimiento que acompañaba a los bailes y en las discotecas.
             </p>
             <img class="1920" src="Imagenes/1920.png" alt="1920">
         </div>
         <div>
             <h3>1930</h3>
-            <p>La Segunda Guerra Mundial cambió por completo la dirección de la 
-            moda. Como los hombres se iban a luchar, las mujeres se hacían 
-            cargo no solo de las casas, sino de los negocios, y esto las llevó
-            a usar pantalones. La austeridad y los colores oscuros definieron 
-            este periodo de la moda.
+            <p>La Segunda Guerra Mundial cambió por completo la dirección de la
+                moda. Como los hombres se iban a luchar, las mujeres se hacían
+                cargo no solo de las casas, sino de los negocios, y esto las llevó
+                a usar pantalones. La austeridad y los colores oscuros definieron
+                este periodo de la moda.
             </p>
             <img class="1930" src="Imagenes/1930.jpg" alt="1930">
         </div>
         <div>
             <h3>1940</h3>
-            <p>Al terminar la guerra, las mujeres querían volver a lucir 
-            glamurosas, por lo que el culto a la belleza definió la moda 
-            durante estos años. Regresaron los colores vivos y el exceso de telas. El dobladillo llegaba por debajo de la rodilla.
+            <p>Al terminar la guerra, las mujeres querían volver a lucir
+                glamorosas, por lo que el culto a la belleza definió la moda
+                durante estos años. Regresaron los colores vivos y el exceso de telas. El dobladillo 
+                llegaba por debajo de la rodilla.
             </p>
             <img class="1940" src="Imagenes/1940.jpeg" alt="1940">
         </div>
         <div>
             <h3>1950</h3>
             <p>Comienza el consumismo americano y el ready to wear. Se utilizaban
-            colores pastel, faldas largas y chamarras de cuero. La feminidad
-            predomina en todos los diseños de esta época.
+                colores pastel, faldas largas y camperas de cuero. La femineidad
+                predomina en todos los diseños de esta época.
             </p>
             <img class="1950" src="Imagenes/1950.jpg" alt="1950">
         </div>
         <div>
             <h3>1960</h3>
             <p>Los movimientos feministas y de flower power tuvieron un gran
-            impacto en la moda, ya que nace la minifalda y hay una 
-            explosión de colores. Pantalones acampanados y telas de 
-            algodón predominan durante esta década. La ropa se basa en
-            la creatividad y la originalidad.
+                impacto en la moda, ya que nace la minifalda y hay una
+                explosión de colores. Pantalones acampanados y telas de
+                algodón predominan durante esta década. La ropa se basa en
+                la creatividad y la originalidad.
             </p>
             <img class="1960" src="Imagenes/1960.jpg" alt="1960">
         </div>
         <div>
             <h3>1970</h3>
             <p>Fue la época disco. Telas sintéticas como la lycra y los zapatos
-            de plataforma encabezan la moda durante los años setenta. Se 
-            crea el look psicodélico y el uso de los estampados predomina.
+                de plataforma encabezan la moda durante los años setenta. Se
+                crea el look psicodélico y predomina el uso de los estampados.
             </p>
             <img class="1970" src="Imagenes/1970.jpg" alt="1970">
         </div>
         <div>
             <h3>1980</h3>
-            <p>Esta época se caracteriza por la rebeldía en la moda y la 
-            inspiración disco. Destacan las hombreras, las lentejuelas y
-            el cuero. La mezclilla se vuelve un ícono y todos la utilizan,
-            ya no solo los obreros como se acostumbraba anteriormente.
-            Colores vibrantes mezclados de manera inusual estaban totalmente permitidos.
-            La fiebre 'fitness' de los años 80 fue otro de los grandes cambios
-            socio-culturales que marcó esta época en la que el consumo de las
-            actividades de ocio en general se diversificó y se masificó. 
-            Gracias a los reproductores de vídeo VHS y a multitud de programas
-            televisivos dedicados al aerobic, todo el mundo podía ponerse en 
-            forma con Jane Fonda, por no mencionar la proliferación del tejido
-            que marcó los años ochenta, la licra. Desde leggings con 
-            calentadores y chándal, pasando por las clásicas bambas blancas
-            de tenis o el nacimiento del culto a las zapatillas Nike. Esta
-            fue la década en la que las prendas de deporte empezaron a 
-            percibirse como moda y a ser utilizadas dentro y fuera del 
-            gimnasio. Hasta al mítico plumas que pasó de las pistas de 
-            esquí a las calles de ciudad.
+            <p>Esta época se caracteriza por la rebeldía en la moda y la
+                inspiración disco. Destacan las hombreras, las lentejuelas y
+                el cuero. La mezclilla -jean- se vuelve un ícono y todos la utilizan,
+                ya no solo los obreros como se acostumbraba anteriormente.
+                Colores vibrantes mezclados de manera inusual estaban totalmente permitidos.
+                La fiebre 'fitness' de los años 80 fue otro de los grandes cambios
+                socio-culturales que marcó esta época en la que el consumo de las
+                actividades de ocio en general se diversificó y se masificó.
+                Gracias a los reproductores de vídeo VHS y a multitud de programas
+                televisivos dedicados al aerobic, todo el mundo podía ponerse en
+                forma con Jane Fonda, por no mencionar la proliferación del tejido
+                que marcó los años ochenta, la lycra. Desde leggings con
+                calentadores y chándal, pasando por las clásicas bambas blancas
+                de tenis o el nacimiento del culto a las zapatillas Nike. Esta
+                fue la década en la que las prendas de deporte empezaron a
+                percibirse como moda y a ser utilizadas dentro y fuera del
+                gimnasio. Hasta al mítico plumas que pasó de las pistas de
+                esquí a las calles de ciudad.
             </p>
             <img class="1980" src="Imagenes/1980.jpg" alt="1980">
         </div>
         <div>
             <h3>1990</h3>
             <p>Es la época de las supermodelos y el estilo grounge. Los Converse
-            y las t-shirts predominan en esta época en la que el look era 
-            descuidado y desarreglado.
+                y las t-shirts predominan en esta época en la que el look era
+                descuidado y desarreglado.
             </p>
             <img class="1990" src="Imagenes/1990.jpg" alt="1990">
         </div>
         <div>
             <h3>2000</h3>
             <p>La cultura pop y el culto a las celebridades es lo que más
-            influyó durante esta época en la moda. Se utilizaban pantalones y
-            faldas low waist, así como brillantina y mezclilla. Podría 
-            considerarse una de las peores épocas para la moda.
+                influyó durante esta época en la moda. Se utilizaban pantalones y
+                faldas low waist, así como brillantina y mezclilla. Podría
+                considerarse una de las peores épocas para la moda.
             </p>
             <img class="2000" src="Imagenes/2000.jpg" alt="2000">
         </div>
         <div>
             <h3>2010</h3>
             <p>Fast fashion es lo que predominó. No tuvo
-            dos colecciones al año como antes, sino que hubo seis mini 
-            colecciones. La producción masiva ha llegado a otro nivel.
-            Los hombres implementan el escote en V junto con pantalones
-            chupines y zapatillas de marca. Los pantalones blancos en los 
-            hombres son sensación, en cambio, los pantalones oscuros aportan
-            una gran elegancia, tanto como las camisas abiertas con unas remeras
-            o camisetas debajo y arremangadas. Las mujeres prefieren moda fresca
-            pero con un toque moderno, poco maquillaje, cabello natural pero con
-            peinados estructurados combinando un poco de moda de los año 1960.
-            El vintage tiene fuerte presencia en el guardarropa femenino. 
+                dos colecciones al año como antes, sino que hubo seis mini
+                colecciones. La producción masiva ha llegado a otro nivel.
+                Los hombres implementan el escote en V junto con pantalones
+                chupines y zapatillas de marca. Los pantalones blancos en los
+                hombres son sensación. Se comenzaron a usar las camisas arremangadas y abiertas, con unas remeras
+                o camisetas debajo. Las mujeres prefieren moda fresca,
+                pero con un toque moderno, poco maquillaje, cabello natural pero con
+                peinados estructurados, combinando un poco de moda de los años 1960.
+                El vintage tiene fuerte presencia en el guardarropa femenino.
             </p>
             <img class="2010" src="Imagenes/2010.jpg" alt="2010">
         </div>
         <div>
             <h3>2020</h3>
             <p>Hoy en día pueden estar de moda muchas cosas a la vez, de varios
-            estilos. Elige lo que mejor te sienta, pues no puedes echarte encima
-            todo lo que está usando al momento. Usa lo que te quede bien y lo 
-            que te haga sentir más cómoda. La simplicidad es la que manda. 
-            Piezas básicas que te aseguren hacer distintas combinaciones para crear
-            muchos looks y siempre a la moda.
+                estilos. Elige lo que mejor te sienta, ya que existen diferentes y variadas tendencias.
+                Usa lo que te quede bien y lo que te haga sentir más cómoda. La simplicidad es la que manda.
+                Piezas básicas que te aseguren hacer distintas combinaciones para crear
+                muchos looks y siempre estar a la moda.
             </p>
             <img class="2020" src="Imagenes/1970.jpg" alt="2020">
         </div>
-    </main>    
+    </main>
 </body>
+
 </html>
