--- a/looks.html
+++ b/looks.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,32 +8,34 @@
     <title>Codo Moda</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
+
 <body>
     <header>
-        <img class= "logo" src ="Imagenes/logo.png" alt="logo">
-        <h1>Looks con Codo</h1>
+        <img class="logo" src="Imagenes/logo.png" alt="logo">
+        <h2>Looks con Codo</h2>
         <nav>
-            <img class= "percha" src ="Imagenes/percha.png" alt="percha">
-            <a class="home" href ="index.html">Volver a la home</a>
+            <img class="percha" src="Imagenes/percha.png" alt="percha">
+            <a class="home" href="index.html">Volver a la home</a>
         </nav>
     </header>
-        <div class="container">
-            <h2>Tips para varios días</h2>
-            <div><img class= "look1" src ="Imagenes/1.png" alt="look1"></div>
-            <div><img class= "look2" src ="Imagenes/2.png" alt="look2"></div>
-            <div><img class= "look3" src ="Imagenes/3.png" alt="look3"></div>
-            <div><img class= "look4" src ="Imagenes/4.png" alt="look4"></div>
-            <div><img class= "look5" src ="Imagenes/5.png" alt="look5"></div>
-            <div><img class= "look6" src ="Imagenes/6.png" alt="look6"></div>
-            <div><img class= "look7" src ="Imagenes/7.png" alt="look7"></div>
-            <div><img class= "look8" src ="Imagenes/8.png" alt="look8"></div>
-            <div><img class= "look9" src ="Imagenes/9.png" alt="look9"></div>
-            <div><img class= "look10" src ="Imagenes/10.png" alt="look10"></div>
-            <div><img class= "look11" src ="Imagenes/11.png" alt="look11"></div>
-            <div><img class= "look12" src ="Imagenes/12.png" alt="look12"></div>
-            <div><img class= "look13" src ="Imagenes/13.png" alt="look13"></div>
-            <div><img class= "look14" src ="Imagenes/14.png" alt="look14"></div>
-            <div><img class= "look15" src ="Imagenes/15.png" alt="look15"></div>
-        </div>
+    <div class="container">
+        <h2>Tips para varios días</h2>
+        <div><img class="look1" src="Imagenes/1.png" alt="look1"></div>
+        <div><img class="look2" src="Imagenes/2.png" alt="look2"></div>
+        <div><img class="look3" src="Imagenes/3.png" alt="look3"></div>
+        <div><img class="look4" src="Imagenes/4.png" alt="look4"></div>
+        <div><img class="look5" src="Imagenes/5.png" alt="look5"></div>
+        <div><img class="look6" src="Imagenes/6.png" alt="look6"></div>
+        <div><img class="look7" src="Imagenes/7.png" alt="look7"></div>
+        <div><img class="look8" src="Imagenes/8.png" alt="look8"></div>
+        <div><img class="look9" src="Imagenes/9.png" alt="look9"></div>
+        <div><img class="look10" src="Imagenes/10.png" alt="look10"></div>
+        <div><img class="look11" src="Imagenes/11.png" alt="look11"></div>
+        <div><img class="look12" src="Imagenes/12.png" alt="look12"></div>
+        <div><img class="look13" src="Imagenes/13.png" alt="look13"></div>
+        <div><img class="look14" src="Imagenes/14.png" alt="look14"></div>
+        <div><img class="look15" src="Imagenes/15.png" alt="look15"></div>
+    </div>
 </body>
+
 </html>
