--- a/looks.html
+++ b/looks.html
@@ -8,11 +8,11 @@
     <title>Codo Moda</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
-
+    
 <body>
     <header>
-        <img class="logo" src="Imagenes/logo.png" alt="logo">
-        <h2>Looks con Codo</h2>
+        <img class="logo" src="./Imagenes/logo3.png" alt="logo">
+        <h2>Inspiración para que armes tus looks</h2>
         <nav>
             <img class="percha" src="Imagenes/percha.png" alt="percha">
             <a class="home" href="index.html">Volver a la home</a>
