--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <header>
         <img class="logo" src="./Imagenes/logo3.png" alt="logo">
-        <h1>Codo Moda</h1>
+        <h1>Codo Moda</h1> <br>
+        <h2>Te ayudamos a encontrar tu estilo</h2>
         <nav>
             <a href="index.html">
                 <img class="percha" src="Imagenes/percha.png" alt="percha">
@@ -28,8 +29,8 @@
         <p>La moda es el arte del vestido, de la confección de prendas
             sobre la base de parámetros funcionales y estilísticos, tanto en ropa
             como accesorios. <br><br>
-            El vestido es una necesidad básica para el ser humano, para protegerse del
-            frío y de las inclemencias del tiempo. Durante su evolución, el ser humano
+            El vestido es una necesidad básica para el ser humano, para protegerse de las
+            inclemencias del tiempo. Durante su evolución, el ser humano
             ha ido perdiendo el pelo, que ha tenido que suplir con pieles de otros
             animales o, más tarde, con lana o productos vegetales como el lino y el
             algodón. Sin embargo, partiendo de esta primera necesidad, con el tiempo
@@ -42,29 +43,26 @@
             religiosos o sexistas -el vestido ha servido a menudo como objeto de
             diferenciación sexual-.<br><br>
 
-            En el Renacimiento surgió el concepto de moda tal como lo entendemos
-            hoy día, introduciéndose nuevos géneros y adquiriendo la costura un
-            alto grado de profesionalización. En la Italia renacentista aparecieron
-            los trajes más ricos y espectaculares de la historia, de vivos colores y
-            formas imaginativas y originales, otorgando gran relevancia a las mangas,
-            a los pliegues y a las caídas de tela de forma vertical, con finos
-            bordados y rica pasamanería. En el siglo XVI el calzón corto era a modo
-            de bombacho, y continuó usándose el jubón, junto a capas de diverso tipo
-            y adornos como la gorguera, tela de encajes fruncidos que cubría el
-            cuello. En el atuendo femenino apareció el corsé, que ceñía la cintura,
-            sobre una falda en forma de campana llamada crinolina, hecha de tela y
-            crin de caballo, y reforzada con aros metálicos. En el siglo XVII
-            predominaron las formas sobrias, austeras, por influencia religiosa,
-            siendo el paño el material más utilizado, y la seda sólo al alcance
-            de las clases elevadas. El jubón se transformó en chaqueta, con el
-            cuello de volantes de encaje almidonados y el calzón se alargó y quedó
-            por debajo de unas altas botas. En Francia, la corte de Luis XIV
-            favoreció la alta costura, empezando a dictar la evolución de la moda
-            a nivel europeo. Apareció entonces la corbata, en un principio en forma
-            de lazo, anudada al cuello; también apareció la casaca, una larga
-            chaqueta ajustada con forma acampanada en su parte inferior.
+            Más allá de las modas y tendencias, creemos que nuestra vestimenta es una forma de expresión, una forma de comunicar 
+            sentimientos, estados de ánimo y -por sobre todas las cosas- al sentirnos cómodas y seguras, nos potencia y nos 
+            hace brillar. Con nuestra experiencia y amor por la moda, podemos ayudarte a enconrar tu estilo, a través de 
+            prendas que te hagan sentir cómoda, segura y auténtica. Adaptar las tendencias a tu estilo, potenciarte y, 
+            de esta forma, ayudarte a ir más lejos para que puedas lograr todo lo que te propongas.
+
+            Somos Mechi Gaona y Sole Tezanos, amigas hace años. Tenemos 18 años de experiencia en styling, trabajamos con marcas
+            nacionales e internacionales y amamos la moda! 
         </p>
     </main>
 </body>
+
+<footer>
+    <p>Seguinos en las redes</p>
+        <nav>
+            <a href="https://instagram.com" target="_blank">
+            <img src="./Imagenes/instagram-3.png" alt="instagram" width="20px"></a>
+            <a href="https://facebook.com" target="_blank">
+            <img src="./Imagenes/facebook2.png" alt="facebook" width="20px"></a>
+        </nav>
+</footer>
 
 </html>
