--- a/historia.html
+++ b/historia.html
@@ -17,7 +17,9 @@
     <main>
         <h2>Evolución de la moda a través de los años</h2>
         <img class="evolucion" src ="Imagenes/evolucion.jpg" alt="evolucion">
-        <div>
+        
+        <div class ="container1">
+        <div class="item">
             <h3>1910</h3>
             <p>La Revolución Industrial y la Primera Guerra Mundial causaron un 
             impacto en la moda durante esta década.Junto con el Art Deco, que 
@@ -26,9 +28,9 @@
             Los hombres ya no eran las figuras paternas, sino joviales y ligeros. 
             Se utilizaba el corsé y la silueta era exagerada.
             </p>
-            <img class="1910" src="Imagenes/1910.jpg" alt="1910">
+            <img class="fotos" src="Imagenes/19100.png" alt="1910">
         </div>
-        <div>
+        <div class="item">
             <h3>1920</h3>
             <p>La moda en esta época representa la diversión y la libertad que 
             había después de la guerra. Predominan los vestidos sueltos, los 
@@ -43,9 +45,9 @@
             abalorios y perlas dominaron los looks para dar un aire elegante y con 
             mucho movimiento que acompañaba a los bailes y en las discotecas.
             </p>
-            <img class="1920" src="Imagenes/1920.png" alt="1920">
+            <img class="fotos" src="Imagenes/1920.png" alt="1920">
         </div>
-        <div>
+        <div class="item">
             <h3>1930</h3>
             <p>La Segunda Guerra Mundial cambió por completo la dirección de la 
             moda. Como los hombres se iban a luchar, las mujeres se hacían 
@@ -53,25 +55,25 @@
             a usar pantalones. La austeridad y los colores oscuros definieron 
             este periodo de la moda.
             </p>
-            <img class="1930" src="Imagenes/1930.jpg" alt="1930">
+            <img class="fotos" src="Imagenes/1930.jpg" alt="1930">
         </div>
-        <div>
+        <div class="item">
             <h3>1940</h3>
             <p>Al terminar la guerra, las mujeres querían volver a lucir 
             glamurosas, por lo que el culto a la belleza definió la moda 
             durante estos años. Regresaron los colores vivos y el exceso de telas. El dobladillo llegaba por debajo de la rodilla.
             </p>
-            <img class="1940" src="Imagenes/1940.jpeg" alt="1940">
+            <img class="fotos" src="Imagenes/1940.jpeg" alt="1940">
         </div>
-        <div>
+        <div class="item">
             <h3>1950</h3>
             <p>Comienza el consumismo americano y el ready to wear. Se utilizaban
             colores pastel, faldas largas y chamarras de cuero. La feminidad
             predomina en todos los diseños de esta época.
             </p>
-            <img class="1950" src="Imagenes/1950.jpg" alt="1950">
+            <img class="fotos" src="Imagenes/1950.jpg" alt="1950">
         </div>
-        <div>
+        <div class="item">
             <h3>1960</h3>
             <p>Los movimientos feministas y de flower power tuvieron un gran
             impacto en la moda, ya que nace la minifalda y hay una 
@@ -79,17 +81,17 @@
             algodón predominan durante esta década. La ropa se basa en
             la creatividad y la originalidad.
             </p>
-            <img class="1960" src="Imagenes/1960.jpg" alt="1960">
+            <img class="fotos" src="Imagenes/1960.jpg" alt="1960">
         </div>
-        <div>
+        <div class="item">
             <h3>1970</h3>
             <p>Fue la época disco. Telas sintéticas como la lycra y los zapatos
             de plataforma encabezan la moda durante los años setenta. Se 
             crea el look psicodélico y el uso de los estampados predomina.
             </p>
-            <img class="1970" src="Imagenes/1970.jpg" alt="1970">
+            <img class="fotos" src="Imagenes/1970.jpg" alt="1970">
         </div>
-        <div>
+        <div class="item">
             <h3>1980</h3>
             <p>Esta época se caracteriza por la rebeldía en la moda y la 
             inspiración disco. Destacan las hombreras, las lentejuelas y
@@ -110,26 +112,26 @@
             gimnasio. Hasta al mítico plumas que pasó de las pistas de 
             esquí a las calles de ciudad.
             </p>
-            <img class="1980" src="Imagenes/1980.jpg" alt="1980">
+            <img class="fotos" src="Imagenes/1980.jpg" alt="1980">
         </div>
-        <div>
+        <div class="item">
             <h3>1990</h3>
             <p>Es la época de las supermodelos y el estilo grounge. Los Converse
             y las t-shirts predominan en esta época en la que el look era 
             descuidado y desarreglado.
             </p>
-            <img class="1990" src="Imagenes/1990.jpg" alt="1990">
+            <img class="fotos" src="Imagenes/1990.jpg" alt="1990">
         </div>
-        <div>
+        <div class="item">
             <h3>2000</h3>
             <p>La cultura pop y el culto a las celebridades es lo que más
             influyó durante esta época en la moda. Se utilizaban pantalones y
             faldas low waist, así como brillantina y mezclilla. Podría 
             considerarse una de las peores épocas para la moda.
             </p>
-            <img class="2000" src="Imagenes/2000.jpg" alt="2000">
+            <img class="fotos" src="Imagenes/2000.jpg" alt="2000">
         </div>
-        <div>
+        <div class="item">
             <h3>2010</h3>
             <p>Fast fashion es lo que predominó. No tuvo
             dos colecciones al año como antes, sino que hubo seis mini 
@@ -143,9 +145,9 @@
             peinados estructurados combinando un poco de moda de los año 1960.
             El vintage tiene fuerte presencia en el guardarropa femenino. 
             </p>
-            <img class="2010" src="Imagenes/2010.jpg" alt="2010">
+            <img class="fotos" src="Imagenes/2010.jpg" alt="2010">
         </div>
-        <div>
+        <div class="item">
             <h3>2020</h3>
             <p>Hoy en día pueden estar de moda muchas cosas a la vez, de varios
             estilos. Elige lo que mejor te sienta, pues no puedes echarte encima
@@ -154,7 +156,8 @@
             Piezas básicas que te aseguren hacer distintas combinaciones para crear
             muchos looks y siempre a la moda.
             </p>
-            <img class="2020" src="Imagenes/1970.jpg" alt="2020">
+            <img class="fotos" src="Imagenes/2020.jpg" alt="2020">
+        </div>
         </div>
     </main>    
 </body>
