--- a/index.html
+++ b/index.html
@@ -27,41 +27,57 @@
         sobre la base de parámetros funcionales y estilísticos, tanto en ropa
         como accesorios (sombreros, guantes, cinturones, bolsos, zapatos, gafas). 
         El vestido es una necesidad básica para el ser humano, para protegerse del
-        frío y de las inclemencias del tiempo. Durante su evolución, el ser humano
-        ha ido perdiendo el pelo, que ha tenido que suplir con pieles de otros
-        animales o, más tarde, con lana o productos vegetales como el lino y el
-        algodón. Sin embargo, partiendo de esta primera necesidad, con el tiempo
-        el vestido ha adquirido un carácter estético, por cuanto ha reflejado 
+        frío y de las inclemencias del tiempo.</p>
+        <p>Con el tiempo el vestido ha adquirido un carácter estético, por cuanto ha reflejado 
         el gusto y el carácter de su portador, y se ha ido convirtiendo en un
         adorno más de la persona, sujeto a los cánones de la moda y del 
-        devenir artístico de cada civilización. Asimismo, en el vestido 
-        intervienen factores climáticos y geográficos, así como sociales 
-        —el vestido como reflejo de una determinada posición social—, 
-        religiosos o sexistas —el vestido ha servido a menudo como objeto de
-        diferenciación sexual—.
-
-        En el Renacimiento surgió el concepto de moda tal como lo entendemos 
-        hoy día, introduciéndose nuevos géneros y adquiriendo la costura un 
-        alto grado de profesionalización. En la Italia renacentista aparecieron 
-        los trajes más ricos y espectaculares de la historia, de vivos colores y
-        formas imaginativas y originales, otorgando gran relevancia a las mangas,
-        a los pliegues y a las caídas de tela de forma vertical, con finos 
-        bordados y rica pasamanería. En el siglo XVI el calzón corto era a modo
-        de bombacho, y continuó usándose el jubón, junto a capas de diverso tipo
-        y adornos como la gorguera, tela de encajes fruncidos que cubría el 
-        cuello. En el atuendo femenino apareció el corsé, que ceñía la cintura,
-        sobre una falda en forma de campana llamada crinolina, hecha de tela y
-        crin de caballo, y reforzada con aros metálicos. En el siglo XVII 
-        predominaron las formas sobrias, austeras, por influencia religiosa,
-        siendo el paño el material más utilizado, y la seda sólo al alcance
-        de las clases elevadas. El jubón se transformó en chaqueta, con el 
-        cuello de volantes de encaje almidonados, y el calzón se alargó y quedó
-        por debajo de unas altas botas. En Francia, la corte de Luis XIV 
-        favoreció la alta costura, empezando a dictar la evolución de la moda
-        a nivel europeo. Apareció entonces la corbata, en un principio en forma
-        de lazo, anudada al cuello; también apareció la casaca, una larga 
-        chaqueta ajustada con forma acampanada en su parte inferior.
-        </p>
+        devenir artístico de cada civilización.</p>
+        <ul class="slider">
+            <li>
+                  <input type="radio" id="slide1" name="slide" checked>
+                  <label for="slide1"></label>
+                  <img src="Imagenes/31.png" />
+            </li>
+            <li>
+                  <input type="radio" id="slide2" name="slide">
+                  <label for="slide2"></label>
+                  <img src="Imagenes/32.png" />
+            </li>
+            <li>
+                  <input type="radio" id="slide3" name="slide">
+                  <label for="slide3"></label>
+                  <img src="Imagenes/33.png" />
+            </li>
+            <li>
+                <input type="radio" id="slide3" name="slide">
+                <label for="slide3"></label>
+                <img src="Imagenes/34.png" />
+          </li>
+          <li>
+            <input type="radio" id="slide3" name="slide">
+            <label for="slide3"></label>
+            <img src="Imagenes/35.png" />
+          </li>
+        </ul>
     </main>
+    <footer> 
+        <section>
+            <div>
+               <a href= ""><i class="fab fa-facebook"></i></a>
+               <a href= ""><i class="fab fa-youtube"></i></a>
+               <a href= ""><i class="fab fa-twitter"></i></a>
+               <a href= ""><i class="fab fa-pinterest"></i></a>
+               <a href= ""><i class="fab fa-instagram"></i> </a>
+    
+            <p>
+            <form action="/registro" method="POST">
+                <input class="caja" placeholder="Update in your inbox..." type="text" name="actualizacion">
+                <label for="actualizacion" name="actualizacion" id="actualizacion">
+            </form>
+            <button class="go">Go</button></p>
+            <p class="textofinal">Copyright 2022. All Rights Reserved</p>
+         </section>
+         
+    </footer>   
 </body>
 </html>
