--- a/looks.html
+++ b/looks.html
@@ -7,6 +7,9 @@
     <title>Codo Moda</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Imagenes/percha.png" type="imagen/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
 <body>
     <header>
         <img class= "logo" src ="Imagenes/logo.png" alt="logo">
@@ -16,23 +19,68 @@
             <a class="home" href ="index.html">Volver a la home</a>
         </nav>
     </header>
+    <h2>Tips para varios días</h2>
         <div class="container">
-            <h2>Tips para varios días</h2>
-            <div><img class= "look1" src ="Imagenes/1.png" alt="look1"></div>
-            <div><img class= "look2" src ="Imagenes/2.png" alt="look2"></div>
-            <div><img class= "look3" src ="Imagenes/3.png" alt="look3"></div>
-            <div><img class= "look4" src ="Imagenes/4.png" alt="look4"></div>
-            <div><img class= "look5" src ="Imagenes/5.png" alt="look5"></div>
-            <div><img class= "look6" src ="Imagenes/6.png" alt="look6"></div>
-            <div><img class= "look7" src ="Imagenes/7.png" alt="look7"></div>
-            <div><img class= "look8" src ="Imagenes/8.png" alt="look8"></div>
-            <div><img class= "look9" src ="Imagenes/9.png" alt="look9"></div>
-            <div><img class= "look10" src ="Imagenes/10.png" alt="look10"></div>
-            <div><img class= "look11" src ="Imagenes/11.png" alt="look11"></div>
-            <div><img class= "look12" src ="Imagenes/12.png" alt="look12"></div>
-            <div><img class= "look13" src ="Imagenes/13.png" alt="look13"></div>
-            <div><img class= "look14" src ="Imagenes/14.png" alt="look14"></div>
-            <div><img class= "look15" src ="Imagenes/15.png" alt="look15"></div>
+            <div> 
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 1</h3>
+                <img class= "look" src ="Imagenes/1.png" alt="look1">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 2</h3>
+                <img class= "look" src ="Imagenes/2.png" alt="look2">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 3</h3>
+                <img class= "look" src ="Imagenes/3.png" alt="look3">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 4</h3>
+                <img class= "look" src ="Imagenes/4.png" alt="look4">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 5</h3>
+                <img class= "look" src ="Imagenes/5.png" alt="look5">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 6</h3>
+                <img class= "look" src ="Imagenes/6.png" alt="look6">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 7</h3>
+                <img class= "look" src ="Imagenes/7.png" alt="look7">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 8</h3>
+                <img class= "look" src ="Imagenes/8.png" alt="look8">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 9<h3>
+                <img class= "look" src ="Imagenes/9.png" alt="look9">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 10</h3>
+                <img class= "look" src ="Imagenes/10.png" alt="look10">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 11</h3>
+                <img class= "look" src ="Imagenes/11.png" alt="look11">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 12</h3>
+                <img class= "look" src ="Imagenes/12.png" alt="look12">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 13</h3>
+                <img class= "look" src ="Imagenes/13.png" alt="look13">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 14</h3>
+                <img class= "look" src ="Imagenes/14.png" alt="look14">
+            </div>
+            <div>
+                <h3><img class= "percha" src ="Imagenes/percha.png" alt="percha"> Look 15</h3>
+                <img class= "look" src ="Imagenes/15.png" alt="look15">
+            </div>
         </div>
 </body>
 </html>
